css/styles_loginPage.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;700;900&family=Roboto:wght@100;300;400;500;700;900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap');
:root {
    --color-brown: #6B4B3E;
    --color-white: #F8F4F9;
    --cadet-gray: #8da7beff;
    --smoky-black: #171312ff;
    --alice-blue: #eef6fcff;
    --platinum: #d2d6dbff;
    --thistle: #c5adc5ff;
}

html *
{
    font-family: 'Roboto', sans-serif;
}

body
{
    /*background-color: var(--smoky-black);*/
    background-image: url("/images/login-background.jpg");
    background-size: 100%;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
}

#loginDiv
{
    background-image: linear-gradient(45deg, var(--thistle), var(--platinum));
    background-size: 100%;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    font-size: 30px;
    width: 50%;
    min-width: 500px;
    max-width: 700px;
    margin-top: 8%;
    border-radius: 12px;
    border: 4px solid var(--alice-blue);
}


#loginForm 
{
    #loginNameLabel,
    #loginPasswordLabel
    {
        display: inline-block;
        text-align: right;
        font-size: 24px;
        width: 28%;
    }

    
    #regFirstNameLabel,
    #regLastNameLabel,
    #regPhoneLabel,
    #regEmailLabel 
    {
        display: none;
        text-align: right;
        font-size: 20px;
        width: 28%;
    }

    #loginName,
    #loginPassword
    {
        display: inline-block;
        text-align: left;
        font-size: 24px;
        width: 50%;
    }
}

#title-container
{

    display: flex;
    width: 100%;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    border-bottom: 3px solid var(--smoky-black);
}

#title 
{
    font-family: 'Space Grotesk', sans-serif;
    font-size: 64px;
    width: 30%;
    font-weight: 700;
    text-align: center;
    margin: 0;
}

#subtitle
{
    font-family: 'Space Grotesk', sans-serif;
    font-size: 32px;
    font-weight: 300;
    width: 50%;
    text-align: center;
    padding-top: 8px;
    margin: 0;
}

#inner-title{
    font-family: 'Space Grotesk', sans-serif;
    display: inline-block;
    font-size: 0.8em;
    width: 90%;
    text-align: center;
    margin: 12px 0;
}

.nameFieldContainer
{
    display: none;
    flex-direction: row;
    justify-content: space-between;
    width: 50%;
}

.loginInput
{
    font-size: 24px;
}

#registerDiv
{
    text-align: center;
    font-size: 20px;
    width: 70%;
    padding: 16px;
    background: none;
}

.registerField
{
    font-size: 24px;
    text-align: left;
    width: 250px;
    margin-bottom: 2%;
    padding: 2px 4px 2px 4px;
    border:none;
    border-bottom: 2px solid #151426;
    background-color: rgba(255, 255, 255, .6);
}

#registerFirstName,
#registerLastName
{
    width: 50%;
}

#registerFirstName,
#registerLastName,
#registerPhone,
#registerEmail,
#registerButton
{
    display: none;
}

.registerFields
{
    text-align: center;
    font-size: 20px;
    border-radius: 20px;
    width: 70%;
    margin-right: 15%;
    margin-left: 15%;
    background-color: aliceblue;
    align-self: inherit;
}

#registerText
{
    font-family: 'Space Grotesk', sans-serif;
    text-align: center;
    width: 100%;
    color:#000000;
    font-size: 24px;
}

#registerInstruction
{
    color: #d5e5e8;
    text-decoration: double;
    font-size: 18px;
    text-align: center;
}

#registerButton{
    min-width: 200px;
}

#loggedInDiv
{
    font-size: 30px;
    width: 70%;
    margin-left: 15%;
    padding: 25px;
    background-color: #b2b2b2;
}

#accessUIDiv
{
    font-size: 30px;
    width: 70%;
    margin-left: 15%;
    padding: 25px;
    background-color: #b2b2b2;
}

.links
{
    font-size: 30px;
    display: block;
    text-align: center;
    color: #d5e5e8;
    background: none;
}

.buttons
{
    font-size: 20px;
    font-weight: normal;
    border-radius: 6px;
    border-style: none;
    height: 36px;
    min-width: 128px;
    width: 50%;
    color: #ffffff;
    background-color: var(--smoky-black);
    margin: 8px 0 8px 0;
    cursor: pointer;
    filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.3));
}

.buttons:hover{
    color: #edf3ff;
    filter: drop-shadow(0 4px 8px rgba(0, 0, 0, 0.5));
    opacity: 75%;
    transition: filter .3s;
}

.links:hover{
    background-color: #4244a4;
    color: #FFFFFF;
    opacity: 100%;
}

input[type="text"],input[type="password"]{
    font-size: 18px;
    height: 36px;
    text-align: left;
    width: 50%;
    margin-bottom: 2%;
    padding: 4px 16px;
    border-radius: 6px;
    border: 2px solid var(--cadet-gray);
    background-color: var(--color-white);
}

input::placeholder {
    color: #000000;
    opacity: 75%;
}

input:hover,
input:active,
input:focus {
    outline: 0;
    border: 2px solid var(--smoky-black);
    background-color: rgba(255, 255, 255, 1);
}

#loginResult{
    display: inline-block;
    font-size: 0.8em;
    width: 90%;
    text-align: center;
    margin-left: 5%;
    margin-bottom: 2%;
    color: #be070d;
}

#userName{
    display: inline-block;
    width: 80%;
    margin-left: 10%;
    text-align: center;
}

#logoutButton{
    width: 20%;
    margin-left: 40%;
}

select{
    width: 30%;
    margin-left: 35%;
    margin-top: 2%;
    font-size: 0.75em;
}

#firstErrText,
#lastErrText,
#usernameErrText,
#passwordErrText,
#phoneErrText,
#emailErrText {
    text-align: center;
    font-size: 12px;
    color: #be070d;
}

